# pfsense-auto-backup

./: .gitignore  Cargo.toml  README.md
src/: encryption.rs  lib.rs  main.rs
