[package]
name = "pfsense-auto-backup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.5"
dotenv = "0.15.0"
regex = "1.5.4"

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking", "cookies", "multipart"]
