[package]
name = "pfsense-auto-backup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
argon2 = "0.2.3"
block-modes = "0.8.1"
clokwerk = "0.3.5"
dotenv = "0.15.0"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.127"
serde_json = "1.0.66"

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking", "cookies", "multipart"]
